--- a/index.html
+++ b/index.html
@@ -23,94 +23,178 @@
     </style>
 </head>
 <body>
-    <canvas id="rain"></canvas>
-    <script>
-    const canvas = document.getElementById('rain');
-    const ctx = canvas.getContext('2d');
-    function resize() {
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-    }
-    resize();
-    window.addEventListener('resize', resize);
+<canvas id="rain"></canvas>
+<script>
+const canvas = document.getElementById('rain');
+const ctx = canvas.getContext('2d');
+function resize() {
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+}
+resize();
+window.addEventListener('resize', resize);
 
-    // 公共参数
-    const rainText = "崔馨月 happy birthday";
-    function getFontSize() {
-        return Math.floor(window.innerWidth / 10) + 12;
-    }
-    const color = "#ff69b4";
-    const rainCount = 48; // 每组弹幕数量
+const rainText = "崔馨月 happy birthday";
+function getFontSize() {
+    return Math.floor(window.innerWidth / 12) + 10;
+}
+const color = "#ff69b4";
+let fontSize = getFontSize();
+let rowCount = Math.floor(canvas.height / fontSize);
+const rainCount = 58; // 固定弹幕数为100
 
-    // 左侧正常弹幕
-    let rains = [];
-    function createRain() {
-        let fontSize = getFontSize();
-        let x = Math.random() * (canvas.width - fontSize * rainText.length);
+let rains = [];
+let rains2 = [];
+let stoppedRows = [];
+let stoppedRows2 = [];
+let stopStartTime = null;
+let stoppedCount = 0;
+let allStopped = false;
+
+// 初始化弹幕，数量为100
+function initRains() {
+    fontSize = getFontSize();
+    rowCount = rainCount;
+    rains = [];
+    rains2 = [];
+    stoppedRows = [];
+    stoppedRows2 = [];
+    stoppedCount = 0;
+    allStopped = false;
+    for (let i = 0; i < rainCount; i++) {
+        let x = 10 + Math.random() * (canvas.width/2 - fontSize * rainText.length - 20);
         let y = -Math.random() * canvas.height;
-        let speed = 2.2 + Math.random() * 2.2;
-        rains.push({x, y, speed});
+        let speed = 10 + Math.random() * 8;
+        rains.push({x, y, speed, stopped: false, row: i});
+        // 右侧反转
+        let x2 = canvas.width/2 + Math.random() * (canvas.width/2 - fontSize * rainText.length - 20);
+        let y2 = -Math.random() * canvas.height;
+        let speed2 = 10 + Math.random() * 8;
+        rains2.push({x: x2, y: y2, speed: speed2, stopped: false, row: i});
     }
-    function drawRain(rain) {
-        let fontSize = getFontSize();
-        ctx.save();
-        ctx.font = `bold ${fontSize}px STLiti,FZShuTi,cursive,sans-serif`;
-        ctx.fillStyle = color;
-        ctx.shadowColor = "#fff0fa";
-        ctx.shadowBlur = 8;
-        ctx.globalAlpha = 0.85;
-        ctx.fillText(rainText, rain.x, rain.y);
-        ctx.restore();
+}
+initRains();
+window.addEventListener('resize', initRains);
+
+function drawRain(rain) {
+    ctx.save();
+    ctx.font = `bold ${fontSize}px STLiti,FZShuTi,cursive,sans-serif`;
+    ctx.fillStyle = color;
+    ctx.shadowColor = "#ff69b4";
+    ctx.shadowBlur = 24; // 更强虚影
+    ctx.globalAlpha = 0.92;
+    ctx.fillText(rainText, rain.x, rain.y);
+    // 额外虚影层
+    ctx.shadowColor = "#fff";
+    ctx.shadowBlur = 60;
+    ctx.globalAlpha = 0.25;
+    ctx.fillText(rainText, rain.x, rain.y);
+    ctx.restore();
+}
+function drawRain2(rain) {
+    ctx.save();
+    ctx.font = `bold ${fontSize}px STLiti,FZShuTi,cursive,sans-serif`;
+    ctx.fillStyle = color;
+    ctx.shadowColor = "#ff69b4";
+    ctx.shadowBlur = 24;
+    ctx.globalAlpha = 0.92;
+    ctx.fillText(rainText, rain.x, rain.y);
+    // 额外虚影层
+    ctx.shadowColor = "#fff";
+    ctx.shadowBlur = 60;
+    ctx.globalAlpha = 0.25;
+    ctx.fillText(rainText, rain.x, rain.y);
+    ctx.restore();
+}
+
+// 记录动画开始时间
+const startTime = performance.now();
+
+function loop() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+    // 10秒后开始准备停止弹幕
+    const now = performance.now();
+    if (!stopStartTime && now - startTime > 20000) {
+        stopStartTime = now;
     }
 
-    // 右侧反转弹幕
-    let rains2 = [];
-    function createRain2() {
-        let fontSize = getFontSize();
-        // 让整句文字都能完整显示在屏幕右侧
-        let x = canvas.width - (Math.random() * (canvas.width - fontSize * rainText.length));
-        let y = -Math.random() * canvas.height;
-        let speed = 2.2 + Math.random() * 2.2;
-        rains2.push({x, y, speed});
-    }
-    function drawRain2(rain) {
-        let fontSize = getFontSize();
-        ctx.save();
-        // 反转180度并靠右
-        ctx.translate(rain.x + fontSize * rainText.length / 2, rain.y + fontSize / 2);
-        ctx.rotate(Math.PI);
-        ctx.font = `bold ${fontSize}px STLiti,FZShuTi,cursive,sans-serif`;
-        ctx.fillStyle = color;
-        ctx.shadowColor = "#fff0fa";
-        ctx.shadowBlur = 8;
-        ctx.globalAlpha = 0.85;
-        ctx.textAlign = "left";
-        ctx.textBaseline = "top";
-        ctx.fillText(rainText, -fontSize * rainText.length / 2, -fontSize / 2);
-        ctx.restore();
-    }
-
-    function loop() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        // 左侧正常弹幕
-        while (rains.length < rainCount) createRain();
-        for (let rain of rains) {
-            rain.y += rain.speed;
-            drawRain(rain);
+    // 控制每行弹幕停止
+    if (stopStartTime && stoppedCount < rowCount) {
+        // 每0.5秒停止一行
+        if (now - stopStartTime > stoppedCount * 500) {
+            // 找到该行的弹幕（左、右）
+            let idx = rowCount - 1 - stoppedCount; // 从底部开始
+            let rain = rains[idx];
+            let rain2 = rains2[idx];
+            if (rain && !rain.stopped) {
+                rain.stopped = true;
+                stoppedRows.push({x: rain.x, y: rain.y});
+            }
+            if (rain2 && !rain2.stopped) {
+                rain2.stopped = true;
+                stoppedRows2.push({x: rain2.x, y: rain2.y});
+            }
+            stoppedCount++;
+            // 全部停止后标记
+            if (stoppedCount >= rowCount) {
+                allStopped = true;
+            }
         }
-        rains = rains.filter(rain => rain.y < canvas.height + getFontSize());
-
-        // 右侧反转弹幕
-        while (rains2.length < rainCount) createRain2();
-        for (let rain of rains2) {
-            rain.y += rain.speed;
-            drawRain2(rain);
-        }
-        rains2 = rains2.filter(rain => rain.y < canvas.height + getFontSize());
-
-        requestAnimationFrame(loop);
     }
-    loop();
-    </script>
+
+    // 更新和绘制弹幕
+    for (let i = 0; i < rains.length; i++) {
+        let rain = rains[i];
+        if (!rain.stopped) {
+            rain.y += rain.speed;
+            // 到达底部也停止
+            if (rain.y > canvas.height - fontSize) {
+                rain.y = canvas.height - fontSize;
+                rain.stopped = true;
+                stoppedRows.push({x: rain.x, y: rain.y});
+            }
+        }
+        drawRain(rain);
+    }
+    for (let i = 0; i < rains2.length; i++) {
+        let rain = rains2[i];
+        if (!rain.stopped) {
+            rain.y += rain.speed;
+            if (rain.y > canvas.height - fontSize) {
+                rain.y = canvas.height - fontSize;
+                rain.stopped = true;
+                stoppedRows2.push({x: rain.x, y: rain.y});
+            }
+        }
+        drawRain2(rain);
+    }
+
+    // 静止后补齐铺满
+    if (allStopped) {
+        // 补齐所有未静止的行
+        for (let i = 0; i < rowCount; i++) {
+            if (!stoppedRows[i]) {
+                let x = 10 + Math.random() * (canvas.width/2 - fontSize * rainText.length - 20);
+                let y = i * fontSize;
+                stoppedRows[i] = {x, y};
+            }
+            if (!stoppedRows2[i]) {
+                let x2 = canvas.width/2 + Math.random() * (canvas.width/2 - fontSize * rainText.length - 20);
+                let y2 = i * fontSize;
+                stoppedRows2[i] = {x: x2, y: y2};
+            }
+        }
+        // 绘制静止弹幕铺满
+        for (let i = 0; i < rowCount; i++) {
+            drawRain({x: stoppedRows[i].x, y: i * fontSize});
+            drawRain2({x: stoppedRows2[i].x, y: i * fontSize});
+        }
+    }
+
+    requestAnimationFrame(loop);
+}
+loop();
+</script>
 </body>
 </html>
